Pkgcore Release Notes
=====================

See ChangeLog for full commit logs; this is summarized/major changes.

pkgcore 0.2.2:

* misc fixup for asserts in cpy code when debugging is enabled, and closing
  directory fds when corner case error paths are taken (out of memory for
  example).

* atoms are picklable now.

* add tests for pmaint copy (quickpkg equivalent), and add
  --ignore-existing option to copy just pkgs that don't exist in the
  target repo.

* fix pmerge handling of --clean -B for automake and a few other DEPEND level
  hard cycles.


pkgcore 0.2.1:

* fix corner case for portage configuration support; old system (<=2004)
  installations may have /etc/portage/sets/world, which confused pmerges
  world updating, leading to writing bad entries.  Ticket 54.

* fix issues with distcc/ccache (ticket 55) so that they actually work.

* fix pconfig dump traceback; ticket 56.


pkgcore 0.2:

* glsa pkgset will now include metadata/glsa from overlays.

* pmaint script; tool for --sync'ing, doing quickpkging, moving packages
  between repos for repository conversions. General repository maintenance.

* sync subsystem: supports bzr, cvs, darcs, git, mercurial (hg), rsync,
  and subversion.

* binpkg repositories now support modification; FEATURES=buildpkg basically

* binpkg contents handling is significantly faster.

* pmerge: 
  * supports --ask (thanks to nesl247/alex heck)
  * pmerge --replace is default now; use --noreplace for original behaviour.
  * 'installed' set was added; is a pkgset comprised of all slotted atoms from
    the vdb; useful for pmerge -u to enable upgrades of *everything* installed.
  * versioned-installed set was added; useful for -e, this set is compromised
    of exact version of everything installed.
  * added --with-built-depends, -B; resolver defaults to ignoring 'built'
    ebuild depends (those from vdb, from binpkgs for example), this option
    tells it to update those depends.

* xterm titles
