@@ -63,4 +63,4 @@ RSYNC_HOST           = "rsync.gentoo.org/gentoo-portage"
 
 CVS_BIN              = "/usr/bin/cvs"
 
-VERSION              = '0.2.1'
+VERSION              = '0.2.2'
